fix (?) jittery chat on mobile urlbar toggle + other css tweaks

--- a/client/src/styles/Chat.scss
+++ b/client/src/styles/Chat.scss
@@ -109,6 +109,7 @@
     background-color: hsl(20, 50, 95);
     flex-grow: 2;
     margin-right: 0;
+    min-width: 70%;
 
     &::placeholder {
       color: hsl(20, 15, 60);
