--- a/client/src/styles/Window.scss
+++ b/client/src/styles/Window.scss
@@ -13,6 +13,8 @@
     }
 
     &.closed {
+      will-change: transform;
+      transform: translateZ(0);
       position: fixed;
       bottom: 0;
       right: 0;
@@ -31,6 +33,8 @@
   }
 
   &.overlay {
+    will-change: transform;
+    transform: translateZ(0);
     z-index: 5;
     width: 300px;
     position: fixed;
